fix: selection on iOS?

--- a/src/app.css
+++ b/src/app.css
@@ -174,9 +174,6 @@ body {
   flex-direction: column;
   scroll-behavior: smooth;
   overscroll-behavior: none;
-  user-select: none;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
   font-family: 'Nunito Variable'
 }
 
@@ -186,7 +183,8 @@ a {
 }
 
 #episodeListTarget:fullscreen,
-#episodeListTarget.custom-fullscreen {
+#episodeListTarget.custom-fullscreen,
+* {
   user-select: none;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
